sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:16: error: ')' expected but 'else' found.
		else cpt=cpt+1
                ^AlgGnomeSort:26: error: ')' expected but 'else' found.
			else if (plusPetitQue(cpt+1,cpt))
                        ^AlgGnomeSort:32: error: ')' expected but '}' found.
	}
        ^